Add colors based on icone the app

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.NodeExplorer" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/purple</item>
+         <item name="colorSecondary">@color/purple</item>
     </style>
 
     <style name="Theme.NodeExplorer" parent="Base.Theme.NodeExplorer" />
