--- a/app/src/main/res/layout/list_item_node.xml
+++ b/app/src/main/res/layout/list_item_node.xml
@@ -10,20 +10,26 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:contentDescription="TODO"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tvKey"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_node"/>
+        android:src="@drawable/ic_node"
+        app:tint="@color/purple"/>
 
     <TextView
         android:id="@+id/tvAlias"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
         android:text="Alias"
-        android:textStyle="bold"
+        android:textColor="@color/purpleDark"
         android:textSize="24sp"
+        android:textStyle="bold"
+        android:maxLines="1"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintEnd_toStartOf="@+id/imgChannels"
         app:layout_constraintStart_toEndOf="@+id/imgNode"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvUpdated" />
 
     <ImageView
         android:id="@+id/imgSats"
@@ -32,7 +38,8 @@
         android:contentDescription="TODO"
         android:src="@drawable/ic_bitcoin"
         app:layout_constraintStart_toEndOf="@+id/imgNode"
-        app:layout_constraintTop_toBottomOf="@+id/tvAlias"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvAlias"
+        app:tint="#F69313" />
 
     <TextView
         android:id="@+id/tvCapacity"
@@ -48,8 +55,10 @@
         android:layout_height="25dp"
         android:layout_marginEnd="4dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvChannels"
-        android:src="@drawable/ic_channels"/>
+        android:src="@drawable/ic_channels"
+        app:tint="@color/purple" />
 
     <TextView
         android:id="@+id/tvChannels"
@@ -66,6 +75,50 @@
         android:layout_height="wrap_content"
         android:text="Atualizado em: "
         android:textSize="11sp"
+        android:textColor="#8B8B8B"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tvKey"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Public key"
+        android:maxLines="1"
+        android:textSize="10sp"
+        app:layout_constraintTop_toBottomOf="@+id/tvCapacity"/>
+
+    <TextView
+        android:id="@+id/tvPublicAt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Público desde: "
+        android:textSize="11sp"
+        android:textColor="#8B8B8B"
+        app:layout_constraintTop_toBottomOf="@+id/tvKey"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tvCity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="City"
+        android:textSize="11sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tvCountry" />
+
+    <TextView
+        android:id="@+id/tvCountry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Country"
+        android:textSize="11sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
