Adjust text color in dark theme

--- a/app/src/main/res/layout/list_item_node.xml
+++ b/app/src/main/res/layout/list_item_node.xml
@@ -22,10 +22,10 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:text="Alias"
-        android:textColor="@color/purpleDark"
         android:textSize="24sp"
         android:textStyle="bold"
         android:maxLines="1"
+        style="@style/Alias"
         android:layout_marginEnd="4dp"
         app:layout_constraintEnd_toStartOf="@+id/imgChannels"
         app:layout_constraintStart_toEndOf="@+id/imgNode"
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:text="City"
         android:textSize="11sp"
-        android:textColor="@color/black"
+        style="@style/Alias"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvCountry" />
@@ -115,7 +115,7 @@
         android:layout_height="wrap_content"
         android:text="Country"
         android:textSize="11sp"
-        android:textColor="@color/black"
+        style="@style/Alias"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
