--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,5 +6,9 @@
          <item name="colorSecondary">@color/purple</item>
     </style>
 
+    <style name="Alias">
+        <item name="android:textColor">@color/purpleDark</item>
+    </style>
+
     <style name="Theme.NodeExplorer" parent="Base.Theme.NodeExplorer" />
 </resources>
